[package]
name = "rs_parsepatch"
version = "0.3.3"
authors = ["calixteman <cdenizet@mozilla.com>"]
edition = "2018"
repository = "https://github.com/mozilla/pyo3-parsepatch"
homepage = "https://github.com/mozilla/pyo3-parsepatch"

[lib]
name = "rs_parsepatch"
crate-type = ["cdylib"]

[dependencies]
parsepatch = "0.2"

[dependencies.pyo3]
git = "https://github.com/Pyo3/pyo3.git"
rev = "470716e"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
project-url = ["Github", "https://github.com/mozilla/pyo3-parsepatch"]
maintainer-email = "cdenizet@mozilla.com"
