[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "rs_parsepatch"
classifier = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
project-url = { homepage = "https://github.com/mozilla/pyo3-parsepatch" }
maintainer-email = "cdenizet@mozilla.com"
